# django_boilerplate

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: linter.yaml
boilerplate/apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
boilerplate/apps/accounts/migrations/: 0001_initial.py
boilerplate/apps/accounts/templates/accounts/: signin.html  signup.html
boilerplate/apps/payments/asaas/: __init__.py  asaas_api.py
boilerplate/apps/payments/asaas/models/: __init__.py  customer.py
boilerplate/apps/theme/static_src/src/: styles.css
boilerplate/core/: asgi.py  env_settings.py  settings.py  urls.py
boilerplate/templates/: base.html
