[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
prod = [
    "django==5.1.3",
    "pydantic-settings>=2.6.1",
]
dev = [
    "daphne>=4.1.2",
    "django-debug-toolbar>=4.4.6",
]
